# curses_fzf

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml  test.yml
docs/: ColorTheme.rst  Exceptions.rst  FuzzyFinder.rst  Makefile  ScoringResult.rst  advanced_usage.rst  basic_usage.rst  conf.py  index.rst  install.rst  scoring.rst  usage.rst
examples/: curses_preview_with_score_displayed.py  custom_keybindings_and_external_functions.py  custom_scoring_and_color_theme.py  data_dict.yaml  data_simple.txt  dict_items_with_simple_preview_and_preselect.py  fzf_curses_preview_and_score.py  fzf_dicts_with_simple_preview.py  fzf_simple_minimum.py  min_max_items.py  minimal_example.py  reusing_fuzzyfinder_and_autoreturn.py
src/curses_fzf/: __init__.py  colors.py  errors.py  fuzzyfinder.py  help.py  main.py  scoring.py
tests/: test_colors.py  test_fuzzyfinder.py  test_help.py  test_scoring.py
